<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="palette"
            type="com.engageft.fis.pscu.feature.branding.Palette"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/messageTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_cone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/messageTextView"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="11sp"
                android:padding="16dp"
                android:text="@string/ENROLLMENT_SUBMISSION_ERROR_MESSAGE"
                android:textColor="@color/textSecondary"
                app:layout_constraintBottom_toTopOf="@+id/tryAgainButton"
                app:layout_constraintTop_toBottomOf="@+id/iconImageView" />

            <com.engageft.apptoolbox.view.PillButton
                android:id="@+id/tryAgainButton"
                style="@style/ButtonPillPrimaryFilledDefault"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:text="@string/ENROLLMENT_SUBMISSION_ERROR_TRY_AGAIN"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/callSupportButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageTextView" />

            <com.engageft.apptoolbox.view.PillButton
                android:id="@+id/callSupportButton"
                style="@style/ButtonPillSecondaryOutlinedDefault"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ENROLLMENT_SUBMISSION_ERROR_CALL_SUPPORT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tryAgainButton"
                app:layout_constraintTop_toBottomOf="@+id/messageTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>